@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.5</version>
-        <relativePath/>
-        <!-- lookup parent from repository -->
+        <version>3.5.3</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>be.dnsbelgium</groupId>
@@ -27,17 +26,14 @@
         </license>
     </licenses>
     <properties>
-        <!-- We compile with JDK 21 because of Lombok incompatibility with JDK 23 -->
-        <!-- But we run with JDK 23 because of better virtual threads support -->
-        <java.version>21</java.version>
+        <java.version>23</java.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <maven.compiler.proc>full</maven.compiler.proc>
+        <argLine/>
+        <baseImage>eclipse-temurin:23.0.1_11-jre-ubi9-minimal@sha256:f2521f4f7cf25f1259e5db99cda2a6a676f44c68cc452cd1cc0bbeb3f72c06f8</baseImage>
     </properties>
 
     <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-artemis</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,14 +49,17 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
-            <version>6.1.14</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.1.14</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-batch</artifactId>
         </dependency>
 
         <dependency>
@@ -77,6 +76,20 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+        <!-- to enable writing java.time.Instant values to JSON files -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.18.2</version>
         </dependency>
 
         <dependency>
@@ -136,22 +149,18 @@
             <version>2.0.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.github.wimdeblauwe/htmx-spring-boot -->
+        <!-- https://github.com/wimdeblauwe/htmx-spring-boot?tab=readme-ov-file#spring-boot-compatibility -->
         <dependency>
             <groupId>io.github.wimdeblauwe</groupId>
             <artifactId>htmx-spring-boot-thymeleaf</artifactId>
-            <version>3.4.1</version>
+            <version>4.0.1</version>
         </dependency>
 
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.17.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-net</groupId>
-            <artifactId>commons-net</artifactId>
-            <version>3.11.1</version>
         </dependency>
 
         <dependency>
@@ -174,7 +183,7 @@
 
         <!-- Used in GeoIPServiceImpl  -->
         <!-- Transitive dependency of testcontainers is affected by -->
-        <!-- https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-26308 -->
+        <!--  https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-26308 -->
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -214,17 +223,12 @@
             <version>1.10.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.duckdb/duckdb_jdbc -->
         <dependency>
             <groupId>org.duckdb</groupId>
             <artifactId>duckdb_jdbc</artifactId>
-            <version>1.1.3</version>
+            <version>1.3.1.0</version>
         </dependency>
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.commons</groupId>-->
-        <!--            <artifactId>commons-rng-simple</artifactId>-->
-        <!--            <version>1.5</version>-->
-        <!--        </dependency>-->
 
         <dependency>
             <groupId>com.github.f4b6a3</groupId>
@@ -236,7 +240,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>5.3.1</version>
+            <version>5.4.3</version>
         </dependency>
 
         <dependency>
@@ -249,7 +253,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-transport</artifactId>
-            <version>4.1.115.Final</version>
+            <version>4.1.118.Final</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.netty</groupId>
@@ -262,14 +266,14 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-common</artifactId>
-            <version>4.1.115.Final</version>
+            <version>4.1.118.Final</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.netty/netty-codec -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec</artifactId>
-            <version>4.1.115.Final</version>
+            <version>4.1.118.Final</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.netty</groupId>
@@ -281,19 +285,19 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
-            <version>4.1.115.Final</version>
+            <version>4.1.118.Final</version>
         </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-buffer</artifactId>
-            <version>4.1.115.Final</version>
+            <version>4.1.118.Final</version>
         </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-resolver</artifactId>
-            <version>4.1.115.Final</version>
+            <version>4.1.118.Final</version>
         </dependency>
 
         <dependency>
@@ -309,16 +313,22 @@
         </dependency>
 
         <dependency>
-            <groupId>com.hubspot</groupId>
-            <artifactId>NioSmtpClient</artifactId>
-            <version>1.2.0</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.github.pemistahl</groupId>
             <artifactId>lingua</artifactId>
             <version>1.2.2</version>
         </dependency>
+
+<!--        com.github.pemistahl:lingua:1.2.2 depends on 'org.jetbrains.kotlin:kotlin-stdlib:1.6.21'        -->
+<!--        Add explicit dependency on kotlin-stdlib because of https://security.snyk.io/vuln/SNYK-JAVA-ORGJETBRAINSKOTLIN-2393744-->
+
+        <!-- https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib -->
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <!--suppress KotlinMavenPluginPhase -->
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>2.1.10</version>
+        </dependency>
+
 
         <!-- transitive dependency of com.github.pemistahl:lingua -->
         <!-- lingua depends on 2.10.0 which as vulnerability -->
@@ -331,16 +341,10 @@
             <version>3.4.0</version>
         </dependency>
 
-
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>2.8.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>artemis-jakarta-server</artifactId>
         </dependency>
 
         <dependency>
@@ -369,7 +373,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.34</version>
+            <version>1.18.38</version>
             <scope>provided</scope>
         </dependency>
 
@@ -385,6 +389,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.maciejwalkowiak.spring/wiremock-spring-boot -->
         <dependency>
             <groupId>com.maciejwalkowiak.spring</groupId>
             <artifactId>wiremock-spring-boot</artifactId>
@@ -403,7 +408,7 @@
         <dependency>
             <groupId>org.xmlunit</groupId>
             <artifactId>xmlunit-core</artifactId>
-            <version>2.10.0</version>
+            <version>2.10.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -411,7 +416,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.20.3</version>
+            <version>1.20.6</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -425,19 +430,43 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>1.20.3</version>
+            <version>1.20.6</version>
             <scope>test</scope>
         </dependency>
-
-
 
     </dependencies>
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>be.dnsbelgium.mercator.MercatorApplication</mainClass>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- maven surefire -->
@@ -447,8 +476,9 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <!-- To hide ugly warning about a dynamically loaded java agent -->
-                    <!-- (byte-buddy-agent needed by mockito) -->
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <!-- See https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html -->
+                    <!--suppress MavenModelInspection -->
+                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
                 </configuration>
             </plugin>
 
@@ -458,7 +488,9 @@
                 <version>3.4.4</version>
                 <configuration>
                     <to>
-                        <image>${env.REGISTRY}/dnsbelgium/mercator</image>
+                        <!-- use `mvn -D jib.to.image=dnsbelgium/mercator  jib:dockerBuild` to publish to local docker daemon -->
+                        <!--suppress MavenModelInspection -->
+                        <image>${env.REGISTRY}/dnsbelgium/mercator:${env.DEFAULT_TAG}</image>
                         <auth>
                             <!--suppress MavenModelInspection -->
                             <username>${env.DOCKER_USERNAME}</username>
@@ -468,7 +500,8 @@
                     </to>
                     <from>
                         <image>
-                            eclipse-temurin:23.0.1_11-jre-ubi9-minimal@sha256:f2521f4f7cf25f1259e5db99cda2a6a676f44c68cc452cd1cc0bbeb3f72c06f8
+                    <!--    eclipse-temurin:23.0.1_11-jre-ubi9-minimal@sha256:f2521f4f7cf25f1259e5db99cda2a6a676f44c68cc452cd1cc0bbeb3f72c06f8 -->
+                            eclipse-temurin:24.0.1_9-jdk-ubi9-minimal@sha256:88d5eac4f36d7eac63ee2ee835441469f9c76a8e5bedb5fc5b27a86698685a0c
                         </image>
                         <platforms>
                             <platform>
@@ -526,5 +559,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
